feat: add LangChain
